[gd_scene load_steps=13 format=3 uid="uid://4decd14p2dg8"]

[ext_resource type="Script" path="res://main.gd" id="1_00sn7"]
[ext_resource type="Texture2D" uid="uid://cypvn578b3iyi" path="res://Mini Pixel Pack 3/Space_BG (2 frames) (64 x 64).png" id="1_f7apm"]
[ext_resource type="PackedScene" uid="uid://cu0p7vr6rng3w" path="res://enemy.tscn" id="2_qxoll"]
[ext_resource type="PackedScene" uid="uid://c4xvwnhwx16sg" path="res://ship.tscn" id="2_t188r"]
[ext_resource type="PackedScene" uid="uid://87rp5r5ytiw6" path="res://ui.tscn" id="5_b77r7"]
[ext_resource type="AudioStream" uid="uid://bit06qqgsc0st" path="res://Intergalactic Odyssey.mp3" id="7_1i2bc"]
[ext_resource type="Texture2D" uid="uid://d0ftgr4wxb0x5" path="res://Mini Pixel Pack 3/UI objects/Number_font (8 x 8).png" id="7_q3dr0"]
[ext_resource type="AudioStream" uid="uid://cftchvs48ctv6" path="res://Interplanetary Odyssey.mp3" id="8_f6li7"]

[sub_resource type="Animation" id="Animation_ntkrm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 240, 320)]
}

[sub_resource type="Animation" id="Animation_dtae6"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 320), Rect2(0, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qa75m"]
_data = {
"RESET": SubResource("Animation_ntkrm"),
"scroll": SubResource("Animation_dtae6")
}

[sub_resource type="GDScript" id="GDScript_ud5k3"]
script/source = "extends AnimationPlayer
"

[node name="Main" type="Node2D"]
script = ExtResource("1_00sn7")
enemy = ExtResource("2_qxoll")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_f7apm")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 240, 320)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scroll"
libraries = {
"": SubResource("AnimationLibrary_qa75m")
}
script = SubResource("GDScript_ud5k3")

[node name="Ship" parent="." instance=ExtResource("2_t188r")]

[node name="UI" parent="." instance=ExtResource("5_b77r7")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = 120.0
offset_top = 160.0
offset_right = 120.0
offset_bottom = 160.0
grow_vertical = 0
size_flags_horizontal = 4

[node name="Second4" type="Sprite2D" parent="."]
position = Vector2(12, 12)
scale = Vector2(3, 3)
texture = ExtResource("7_q3dr0")
hframes = 5
vframes = 2
frame = 9

[node name="Second3" type="Sprite2D" parent="."]
position = Vector2(36, 12)
scale = Vector2(3, 3)
texture = ExtResource("7_q3dr0")
hframes = 5
vframes = 2
frame = 9

[node name="Second2" type="Sprite2D" parent="."]
position = Vector2(60, 12)
scale = Vector2(3, 3)
texture = ExtResource("7_q3dr0")
hframes = 5
vframes = 2
frame = 9

[node name="Second1" type="Sprite2D" parent="."]
position = Vector2(84, 12)
scale = Vector2(3, 3)
texture = ExtResource("7_q3dr0")
hframes = 5
vframes = 2
frame = 9

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1i2bc")
volume_db = -30.0

[node name="PauseMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f6li7")
volume_db = -30.0

[connection signal="ship_go_boom" from="Ship" to="." method="_on_ship_ship_go_boom"]
[connection signal="start_game" from="UI" to="." method="_on_ui_start_game"]
[connection signal="finished" from="MainMusic" to="." method="_on_main_music_finished"]
[connection signal="finished" from="PauseMusic" to="." method="_on_pause_music_finished"]
